<resources>
    <string name="app_name" translatable="false">SXS-OBD2</string>
    <string name="app_version" translatable="false">Ver. 1</string>
    <string name="copyright_fr3ts0n" translatable="false">© 2015-2022 fr3ts0n</string>
    <string name="translation_credits" translatable="false">Translation by fr3ts0n</string>
    <string name="app_description" translatable="false">Android OBD vehicle diagnostics app for ELM327 Bluetooth adapter</string>
    <string name="copied_to_clipboard" translatable="false">Copied to clipboard</string>
    <string name="title_connecting" translatable="false">Connecting…</string>
    <string name="title_connected_to" translatable="false">Connected %s</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="back_again_to_exit" translatable="false">Press back again to close this app</string>
    <string name="action_connect" translatable="false">Connect</string>
    <string name="obd_none" translatable="false">NO service</string>
    <string name="obd_services" translatable="false">OBD Services</string>
    <string name="obd_veh_info" translatable="false">OBD Vehicle Info</string>
    <string name="obd_data" translatable="false">OBD Data</string>
    <string name="service_freezeframes" translatable="false">OBD Freeze Frames</string>
    <string name="service_testcontrol" translatable="false">OBD test control</string>
    <string name="obd_codes" translatable="false">OBD fault codes</string>
    <string name="obd_permanentcodes" translatable="false">OBD fault codes (permanent)</string>
    <string name="obd_pendingcodes" translatable="false">OBD fault codes (pending)</string>
    <string name="obd_clearcodes" translatable="false">Clear fault codes</string>
    <string name="obd_clear_info" translatable="false">
This will reset the MIL and clear all emission-related diagnostic\n
information, including:\n
 - Diagnostic trouble codes\n
 - Freeze frame data\n
 - Oxygen sensor test data\n
 - Status of system monitoring tests\n
 - On-board monitoring tests results\n
 - Distance travelled while MIL activated\n
 - Number of warm-ups since DTCs cleared\n
 - Distance travelled since DTCs cleared\n
 - Engine run time while MIL activated\n
 - Time since DTCs cleared\n\n
Other manufacturer specific clearing/resetting actions may occur.\n
The loss of data may cause the vehicle to run poorly for a short \n
period of time while the ECU recalibrates itself.
    </string>
    <string name="obd_test_progress" translatable="false">OBD test control in progress.\n
        Please check vehicle reaction.</string>
    <string name="obd_test_confirm" translatable="false">OBD test control requested.\n\n
        The requested OBD test control may generate:\n
        - Vehicle motion\n
        - Exhaust smoke\n
        - High exhaust temperature\n
        - Loud engine noise\n
        - Fuel vapor\n
        - etc.\n\n
        Please confirm to perform this test control on your own risk in a safe test environment only!
    </string>
    <string name="select_device" translatable="false">Select adapter</string>
    <string name="none_paired" translatable="false">No Devices Paired</string>
    <string name="none_found" translatable="false">No Devices Found</string>
    <string name="title_paired_devices" translatable="false">Paired Devices</string>
    <string name="send_to" translatable="false">Send to</string>
    <string name="share" translatable="false">share</string>
    <string name="time" translatable="false">Time [s]</string>
    <string name="chart" translatable="false">Chart</string>
    <string name="demo_stopped" translatable="false">DEMO mode stopped</string>
    <string name="demo_started" translatable="false">DEMO mode started</string>
    <string name="snapshot" translatable="false">snapshot</string>
    <string name="save" translatable="false">Save measurement</string>
    <string name="load" translatable="false">Load measurement</string>
    <string name="saved_data" translatable="false">Saved Data</string>
    <string name="loaded" translatable="false">loaded</string>
    <string name="saved" translatable="false">saved</string>
    <string name="connected_to" translatable="false">"Connected to "</string>
    <string name="demo" translatable="false">Demo…</string>
    <string name="saving_data" translatable="false">Saving data …</string>
    <string name="loading_data" translatable="false">Loading data …</string>
    <string name="dashboard" translatable="false">Dashboard</string>
    <string name="hud" translatable="false">Head Up Display</string>
    <string name="filter" translatable="false">Filter selected</string>
    <string name="settings" translatable="false">Settings</string>
    <string name="common_settings" translatable="false">Common settings</string>
    <string name="measure_system_description" translatable="false">Measurement units system (metric / imperial)</string>
    <string name="measure_system" translatable="false">Measurement units</string>
    <string name="metric" translatable="false">metric</string>
    <string name="imperial" translatable="false">imperial</string>
    <string-array name="measure_options" translatable="false">
        <item>@string/metric</item>
        <item>@string/imperial</item>
    </string-array>
    <string-array name="measure_option_values" translatable="false">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string name="items_for_display" translatable="false">Data items to display</string>
    <string name="items_for_display_descr" translatable="false">Select all data items to be displayed …</string>
    <string-array name="empty" translatable="false" />
    <string name="debugging" translatable="false">Debugging</string>
    <string name="logging_level" translatable="false">Logging level</string>
    <string name="logging_level_description" translatable="false">Level of details to be logged into debug log file</string>
    <string-array name="logging_options" translatable="false">
        <item>OFF</item>
        <item>SEVERE</item>
        <item>WARNING</item>
        <item>INFO</item>
        <item>CONFIG</item>
        <item>FINE</item>
        <item>FINER</item>
        <item>FINEST</item>
        <item>ALL</item>
    </string-array>
    <string-array name="restore_keys" translatable="false">
        <item>LAST_DEV_ADDRESS</item>
        <item>LAST_ECU_ADDRESS</item>
        <item>LAST_SERVICE</item>
        <item>LAST_ITEMS</item>
        <item>LAST_VIEW_MODE</item>
    </string-array>
    <string-array name="restore_options" translatable="false">
        <item>@string/last_elm</item>
        <item>@string/last_ecu</item>
        <item>@string/last_service</item>
        <item>@string/last_data_items</item>
        <item>@string/last_view_mode</item>
    </string-array>
    <string name="last_elm" translatable="false">re-connect last ELM-adapter</string>
    <string name="last_ecu" translatable="false">re-connect last ECU</string>
    <string name="last_service" translatable="false">last OBD service</string>
    <string name="last_data_items" translatable="false">last selected data items</string>
    <string name="last_view_mode" translatable="false">last data view mode</string>
    <string name="keep_screen_on" translatable="false">Keep main screen on</string>
    <string name="keep_screen_on_description" translatable="false">Do not turn OFF screen if main/data screen is on display</string>
    <string name="development_options" translatable="false">Development options</string>
    <string name="dev_opt_description" translatable="false">Options for debugging and customisation</string>
    <string name="extension_files" translatable="false">Protocol customisation files (CSV)</string>
    <string name="conversions" translatable="false">Data Conversions</string>
    <string name="data_items" translatable="false">Data items</string>
    <string name="select_extension" translatable="false">Select .csv extension file …</string>
    <string name="extension_loading" translatable="false">Customisation loading</string>
    <string name="check_cust_settings" translatable="false">Please check your customisation settings\n</string>
    <string name="obd_options" translatable="false">OBD options </string>
    <string name="obd_opt_description" translatable="false">Options for OBD protocol / vehicle communication </string>
    <string name="select_protocol" translatable="false">Preferred OBD protocol </string>
    <string name="plugin_manager" translatable="false">Plugin manager</string>
    <string name="configure" translatable="false">Configure</string>
    <string name="select_fault_code" translatable="false">Select fault code …</string>
    <string name="select_medium" translatable="false">Adapter type …</string>
    <string name="devices_found" translatable="false">%d USB device(s) found</string>
    <string name="min_elm_timeout" translatable="false">Min. ELM timeout [ms]</string>
    <string name="unabletoconnect" translatable="false">Unable to connect device</string>
    <string name="connectionlost" translatable="false">Device connection was lost</string>
    <string name="elm_timeout_descr" translatable="false">Minimum timeout in [ms] to wait for ELM responses</string>
    <string name="day_night_mode" translatable="false">Day/Night view mode</string>
    <string name="night_mode_description" translatable="false">Set display to dark background</string>
    <string name="night_mode" translatable="false">Night mode</string>
    <string name="disable_elm_cmds" translatable="false">Disabled ELM commands</string>
    <string name="disable_elm_cmds_descr" translatable="false">enable/disable ELM commands</string>
    <string name="elm_adaptive_timing" translatable="false">ELM adaptive timing</string>
    <string name="elm_adaptive_timing_descr" translatable="false">Allow adaptive timing handling in ELM drivers?</string>
    <string name="elm_reset_on_nrc" translatable="false">Reset on NRC</string>
    <string name="elm_reset_on_nrc_descr" translatable="false">Reset ELM adapter on NRC error?</string>
    <string name="select_ecu_addr" translatable="false">Select ECU address …</string>
    <string name="disconnect" translatable="false">Disconnect</string>
    <string name="reset_preselections" translatable="false">Reset last pre-selections</string>
    <string name="use_last_settings_description" translatable="false">Use last settings at startup (BT address, ECU address, Display items …)</string>
    <string name="use_last_settings" translatable="false">Use last settings</string>
    <string name="common_settings_description" translatable="false">Common settings for app control</string>
    <string name="secure_connect" translatable="false">Secure connection</string>
    <string name="secure_connect_description" translatable="false">Use encrypted Bluetooth connection</string>
    <string name="elm_options" translatable="false">ELM options</string>
    <string name="elm_custom_init" translatable="false">ELM custom init</string>
    <string name="elm_custom_init_descr" translatable="false">ELM custom initialisation commands</string>
    <string name="UNDEFINED" translatable="false">Undefined</string>
    <string name="INITIALIZING" translatable="false">Initializing…</string>
    <string name="INITIALIZED" translatable="false">Initialized</string>
    <string name="ECU_DETECT" translatable="false">ECU detect…</string>
    <string name="ECU_DETECTED" translatable="false">ECU detected</string>
    <string name="CONNECTING" translatable="false">Connecting…</string>
    <string name="CONNECTED" translatable="false">Connected</string>
    <string name="NODATA" translatable="false">No data</string>
    <string name="STOPPED" translatable="false">Stopped</string>
    <string name="denommeinc" translatable="false">DenommeInc</string>
    <string name="email" translatable="false">eric@denommeinc.net</string>
</resources>