<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/gray">

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/connect_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:text="@string/action_connect"
        android:textColor="@color/white"
        app:icon="@drawable/bluetooth_icon"
        tools:ignore="TextContrastCheck"
        app:backgroundTint="@color/transparent"
        android:layout_centerHorizontal="true"/>



    <LinearLayout
        android:id="@+id/textLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#40000000"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="browseClickedUrl"
            android:text="@string/app_name"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck,UsingOnClickInXml" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:enabled="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="browseClickedUrl"
            android:text="@string/app_version"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="TouchTargetSizeCheck,UsingOnClickInXml" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/denommeinc"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@color/black"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:onClick="browseClickedUrl"
            android:text="@string/email"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@color/black"
            tools:ignore="TouchTargetSizeCheck,UsingOnClickInXml,TextContrastCheck" />
    </LinearLayout>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        android:layout_centerInParent="true"/>

</RelativeLayout>
